<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:layout_width="fill_parent" android:orientation="vertical"
		android:layout_height="wrap_content" android:background="@color/white">
		<RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:text="@string/rTitle"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textSize="30sp" android:textStyle="bold" android:textColor="@color/black"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="15dp"
				android:layout_centerInParent="true" android:layout_centerVertical="true"></TextView>
		</RelativeLayout>
		<TextView android:text="" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="15sp" />
		<TextView android:text="@string/rCorrectRatio"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="25sp" android:textStyle="bold" android:textColor="@color/purple"
			android:layout_marginLeft="15dp"
			android:id="@+id/r_CorrectRatio"></TextView>

		<TextView
		    android:id="@+id/r_WrongTip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15dp"
		    android:layout_marginRight="15dp"
		    android:text="@string/rWrongTip"
		    android:textColor="@color/black"
		    android:textSize="20sp"
		    android:textStyle="bold" >
</TextView>
		<TextView android:text="" android:id="@+id/r_WrongResult"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="15dp"
		    android:layout_marginRight="15dp"
			android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black"></TextView>
		</LinearLayout>
</ScrollView>
