<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@color/white"
	    android:orientation="vertical" >

		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white" >

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerHorizontal="true"
			    android:layout_centerInParent="true"
			    android:layout_centerVertical="true"
			    android:text=" "
			    android:textColor="@color/black"
			    android:textSize="30sp"
			    android:textStyle="bold" >
</TextView>
		</RelativeLayout>

		<TextView
		    android:id="@+id/b_Page"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white"
		    android:textColor="@color/b_blue"
		    android:textSize="20sp"
		    android:textStyle="bold" />

		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white" >

			<SeekBar
			    android:id="@+id/b_seekbar"
			    android:layout_width="250sp"
			    android:layout_height="wrap_content"
			    android:layout_centerHorizontal="true"
			    android:alpha="0.7"
			    android:background="@color/white" />

		</RelativeLayout>

		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white" >

			<Button android:id="@+id/b_Plus" android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:text="@string/bPlus" />
			<Button android:id="@+id/b_Minus" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_alignParentLeft="true"
				android:text="@string/bMinus" />
		</RelativeLayout>

		<TextView
		    android:id="@+id/b_Problem"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white"
		    android:textColor="@color/black"
		    android:layout_marginLeft="15dp"
		    android:layout_marginRight="15dp"
		    android:textSize="17sp" />

		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/white" >

			<CheckBox
			    android:id="@+id/b_Show"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginLeft="42dp"
			    android:text="@string/bShow"
			    android:textColor="@color/black"
			    android:textColorHint="@color/black"
			    android:textSize="18sp" />

			<TextView
			    android:id="@+id/b_Answer"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="39dp"
			    android:layout_toRightOf="@+id/b_Show"
			    android:text="A  "
			    android:textColor="@color/b_blue"
			    android:textSize="30sp"
			    android:textStyle="bold" />

		</RelativeLayout>
	</LinearLayout>
</ScrollView>