<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text=" "
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" >
            </TextView>
        </RelativeLayout>

        <TextView
            android:id="@+id/b_Page"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/b_blue"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <SeekBar
                android:id="@+id/b_seekbar"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:alpha="0.7"
                android:background="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <Button
                android:id="@+id/b_Plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/bPlus" />

            <Button
                android:id="@+id/b_Minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/bMinus" />
        </RelativeLayout>

        <TextView
            android:id="@+id/b_Descript"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent" >

            <TextView
                android:id="@+id/b_Blank"
                android:layout_width="fill_parent"
                android:text=" "
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/line"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/b_Answer"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/transparent"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/b_ShowDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="15dp"
            android:text="@string/bShowDes"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/b_ShowAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:text="@string/bShowAns"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>